--- a/styles.css
+++ b/styles.css
@@ -71,3 +71,73 @@ body {
   justify-content: center;
   font-family: var(--book-font);
 }
+.call-to-action {
+  max-width: 1030px;
+  max-height: 336px;
+  margin: 0 auto;
+  margin-top: 152px;
+}
+.call-to-action h6 {
+  width: 1030px;
+  text-align: center;
+  font-size: var(--medium-font-size);
+  font-weight: var(--book-font);
+  line-height: var(--relaxed-line-height);
+  margin-bottom: 16px;
+}
+.call-to-action p {
+  text-align: center;
+  font-family: var(--extra-bold-book-font);
+  font-size: var(--huge-font-size);
+  font-weight: var(--book-xxl-boldfont-weight);
+  margin-bottom: 88px;
+  background: linear-gradient(
+    45deg,
+    #00b5c1 9.43%,
+    #4336b9 41.88%,
+    #fa4343 106.56%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.call-to-action div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+.call-to-action div svg {
+  width: 3px;
+  height: 3px;
+  background-color: white;
+  border-radius: 50%;
+}
+.call-to-action div p2 {
+  font-size: var(--small-font-size);
+  line-height: var(--compact-line-height);
+}
+.call-to-action button {
+  width: 151px;
+  height: 44px;
+  border: 1px solid transparent;
+  border-image: linear-gradient(
+      125deg,
+      #0d8ed3 5.44%,
+      #0b60bb 17.95%,
+      #0a3aa7 36.44%,
+      #6a387d 69.53%,
+      #c53754 105.59%,
+      #fa5240 117.57%
+    )
+    1;
+  font-size: var(--small-font-size);
+  line-height: var(--compact-line-height);
+  font-family: var(--extra-bold-book-font);
+  font-weight: var(--book-extra-boldfont-weight);
+  letter-spacing: var(--xl-letter-spacing);
+}
+.call-to-action div:nth-child(2) {
+  margin-bottom: 0px;
+}
