--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,18 @@ body {
 .call-to-action div:nth-child(2) {
   margin-bottom: 0px;
 }
+@media screen and (max-width: 767px) {
+  .call-to-action {
+    margin-top: 136px;
+    max-width: 332px;
+    max-height: 272px;
+  }
+  .call-to-action h6 {
+    max-width: 100%;
+    font-size: var(--small-font-size);
+  }
+  .call-to-action p {
+    max-width: 100%;
+    font-size: var(--x-large-font-size);
+  }
+}
