--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
 
   --book-font-weight: Book;
   --book-extra-boldfont-weight: ExtraBold;
+  --book-xxl-boldfont-weight: 800;
 
   --xs-letter-spacing: -2%;
   --s-letter-spacing: -1%;
@@ -57,4 +58,101 @@
   --x-large-font-size: 54px;
   --xx-large-font-size: 81px;
   --huge-font-size: 122px;
+}
+* {
+  margin: 0;
+  padding: 0;
+  background-color: black;
+  color: white;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: var(--book-font);
+}
+.call-to-action {
+  max-width: 1030px;
+  max-height: 336px;
+  margin: 0 auto;
+  margin-top: 152px;
+}
+.call-to-action h6 {
+  max-width: 1030px;
+  text-align: center;
+  font-size: var(--medium-font-size);
+  font-weight: var(--book-font);
+  line-height: var(--relaxed-line-height);
+  margin-bottom: 16px;
+}
+.call-to-action p {
+  text-align: center;
+  font-family: var(--extra-bold-book-font);
+  font-size: var(--huge-font-size);
+  font-weight: var(--book-xxl-boldfont-weight);
+  margin-bottom: 88px;
+  background: linear-gradient(
+    45deg,
+    #00b5c1 9.43%,
+    #4336b9 41.88%,
+    #fa4343 106.56%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.call-to-action div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+.call-to-action div svg {
+  width: 3px;
+  height: 3px;
+  background-color: white;
+  border-radius: 50%;
+}
+.call-to-action div p2 {
+  font-size: var(--small-font-size);
+  line-height: var(--compact-line-height);
+}
+.call-to-action button {
+  width: 151px;
+  height: 44px;
+  border: 1px solid transparent;
+  border-image: linear-gradient(
+      125deg,
+      #0d8ed3 5.44%,
+      #0b60bb 17.95%,
+      #0a3aa7 36.44%,
+      #6a387d 69.53%,
+      #c53754 105.59%,
+      #fa5240 117.57%
+    )
+    1;
+  font-size: var(--small-font-size);
+  line-height: var(--compact-line-height);
+  font-family: var(--extra-bold-book-font);
+  font-weight: var(--book-extra-boldfont-weight);
+  letter-spacing: var(--xl-letter-spacing);
+}
+.call-to-action div:nth-child(2) {
+  margin-bottom: 0px;
+}
+@media screen and (max-width: 767px) {
+  .call-to-action {
+    margin-top: 136px;
+    max-width: 332px;
+    max-height: 272px;
+  }
+  .call-to-action h6 {
+    max-width: 100%;
+    font-size: var(--small-font-size);
+  }
+  .call-to-action p {
+    max-width: 100%;
+    font-size: var(--x-large-font-size);
+  }
 }
