--- a/styles.css
+++ b/styles.css
@@ -324,18 +324,37 @@ body {
 }
 .location-section {
   position: relative;
-  width: 1439px;
-  height: 889px;
+  width: 100%;
+  height: auto;
   border: 1px solid #000;
+  background-color: pink;
+}
+.location-map {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 889px; 
   background-image: url('./assets/visuals/split-map.png');
   background-size: cover;
   background-position: center;
+  z-index: 1;
+}
+.location-pin img{
+  position: absolute;
+  top: 55.59%;
+  left: 68.42%;
+  width: 160px;
+  height: 142.71px;
+  background-color: transparent;
 }
 .location-content {
   position: absolute;
   top: 246px;
   left: 208px;
   max-width: 259px;
+  z-index: 2;
+  background-color: transparent !important;
 }
 .location-header {
   margin-bottom: 16px;
@@ -372,13 +391,6 @@ body {
   height: 72px;
   line-height: 24px;
 }
-.location-pin {
-  position: absolute;
-  top: 460px;
-  left: 968px;
-  width: 160px;
-  height: 142.71px;
-}
 
 @media screen and (min-width: 767px) and (max-width: 1440px) {
   .header {
@@ -387,11 +399,46 @@ body {
   .header-nav button {
     margin-right: 150px;
   }
+  .location-map {
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+  .location-pin img {
+    top: 50.59%;
+    left: 66.42%;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .header {
     display: none;
+  }
+  .location-map {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top center;
+    height: 500px;
+  }
+  .location-pin img {
+    width: 20px;
+    height: 27px;
+    top: 57.59%;
+    left: 72.42%;
+  }
+  .location-header {
+    margin-top: 100px;
+  }
+  .location-header p {
+    font-size: var(--small-font-size);
+  }
+  .location-header h3{
+    font-size: var(--xx-large-font-size);
+    line-height: 64px;
+  }
+  .location-copy h2 {
+    font-size: var(--large-font-size);
+    line-height: 48px;
+    margin-top: 100px;
   }
   .header-mobile {
     display: flex;
