--- a/styles.css
+++ b/styles.css
@@ -376,7 +376,7 @@ body {
   letter-spacing: var(--xs-letter-spacing);
 }
 .location-copy h2 {
-  width: 100%;
+  width: 402px; /* promjena iz 100%*/
   height: 136px;
   font-family: var(--extra-bold-book-font);
   font-size: var(--x-large-font-size);
@@ -388,9 +388,19 @@ body {
 .location-copy p {
   font-size: var(--small-font-size);
   line-height: var(--compact-line-height);
-  width: 100%;
+  width: 402px; /* promjena iz 100%*/
   height: 72px;
   line-height: 24px;
+}
+.intermediate-text {
+  font-size: var(--medium-font-size);
+  line-height: var(--relaxed-line-height);
+  text-align: center;
+  margin-top: 348px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  max-width: 1030px;
 }
 .livestream-section {
   display: flex;
@@ -433,6 +443,9 @@ body {
   font-family: var(--extra-bold-book-font);
   font-weight: var(--book-extra-boldfont-weight);
   letter-spacing: var(--xl-letter-spacing);
+}
+#livestreamButtonMobile {
+  display: none;
 }
 .livestream-img {
   margin-top: 300px;
@@ -572,6 +585,9 @@ body {
     top: 50.59%;
     left: 66.42%;
   }
+  .livestream-img {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -601,12 +617,15 @@ body {
   }
   .location-header h3 {
     font-size: var(--xx-large-font-size);
-    line-height: 64px;
+    line-height: var(--spacious-line-height);
   }
   .location-copy h2 {
     font-size: var(--large-font-size);
-    line-height: 48px;
+    line-height: var(--cozy-line-height);
     margin-top: 100px;
+  }
+  .intermediate-text {
+    margin-top: 700px;
   }
   .header-mobile {
     display: flex;
@@ -641,6 +660,36 @@ body {
   }
   .big-numbers-info-wrapper {
     max-width: 100%;
+  }
+  .livestream-section {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 700px;
+    width: 100%;
+  }
+  .livestream-content, .livestream-img {
+    width: 100%;
+  }
+  .livestream-img {
+    order: 2;
+    margin-top: 0;
+    margin-right: 0;
+    margin-left: auto;  
+    display: block; 
+    max-width: 60%;
+  }
+  .livestream-content {
+    order: 1;
+  }
+  #livestreamButtonDesktop {
+    display: none;
+  }
+  #livestreamButtonMobile {
+    display: block;
+  }
+  .livestream-section h2 {
+      font-size: var(--xx-large-font-size);
+      line-height: var( --airy-line-height);
   }
   .fly-talks {
     flex-direction: column;
