--- a/styles.css
+++ b/styles.css
@@ -466,6 +466,8 @@ body {
   gap: 158px;
 }
 .speakers-copy {
+  position: sticky;
+  top: 0;
   margin-left: 104px;
   margin-top: 70px;
 }
@@ -483,23 +485,32 @@ body {
 }
 .speakers-visuals {
   display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
+  justify-content: flex-start;
   width: 100%;
+  gap: 24px;
+}
+.speaker-column {
+  flex-grow: 1;
+  max-width: 15%;
+  display: flex;
+  flex-direction: column;
+}
+.speakers-visuals .speaker-column:nth-child(2) {
+  margin-top: 112px;
 }
 .speaker-card {
   display: flex;
-  flex: 0 0 calc(33.333% - 24px);
   flex-direction: column;
-  align-items:flex-start;
+  align-items: flex-start;
+  margin-bottom: 20px;
 }
 .speaker-card h5 {
   color: white;
   font-size: var(--small-font-size);
   font-weight: 100;
   line-height: var(--compact-line-height);
-  margin-top: 4px;
-  margin-bottom: 7px;
+  margin-top: 12px;
+  margin-bottom: 6px;
 }
 .speaker-card p {
   color: darkgray;
@@ -507,6 +518,36 @@ body {
   line-height: var(--compact-line-height);
   letter-spacing: var(--s-letter-spacing);
   margin-bottom: 10px;
+}
+.speaker-img-wrapper {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+.speaker-img-wrapper::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    to bottom, 
+    rgba(13, 142, 211, 0.3), 
+    rgba(10, 58, 167, 0.3), 
+    rgba(197, 55, 84, 0.5), 
+    rgba(250, 82, 64, 0.5), 
+    rgba(252, 221, 163, 0.4)
+  );
+  mix-blend-mode: multiply;
+  z-index: 1;
+}
+.speaker-img-wrapper img {
+  width: 100%;
+  height: auto;
+  display: block;
+  position: relative;
+  z-index: 0;
 }
 .fly-talks {
   max-width: 1231px;
