--- a/styles.css
+++ b/styles.css
@@ -489,6 +489,9 @@ body {
   width: 100%;
   gap: 24px;
 }
+.speakers-visuals-mobile-version {
+  display: none;
+}
 .speaker-column {
   flex-grow: 1;
   max-width: 15%;
@@ -677,6 +680,9 @@ body {
   .livestream-img {
     width: 100%;
   }
+  .speakers-visuals {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -778,7 +784,53 @@ body {
   }
   .livestream-section h2 {
       font-size: var(--xx-large-font-size);
-      line-height: var( --airy-line-height);
+      line-height: var(--airy-line-height);
+  }
+  .speakers-section {
+    flex-direction: column;
+    align-items: center;
+  }
+  .speakers-copy {
+    position: static;
+    width: 100%;
+    margin-bottom: 40px;
+  }
+  .speakers-section h2 {
+    font-size: var(--xx-large-font-size);
+    line-height: var(--airy-line-heigh);
+    margin-bottom: 32px;
+    max-width: 100%;
+  }
+  .speakers-section p {
+    font-size: var(--medium-font-size);
+    line-height: var(--airy-line-heigh);
+    max-width: 100%;
+  }
+  .speakers-visuals {
+    display: none;
+  }
+  .speakers-visuals-mobile-version {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    gap: 8px;
+  }
+  .speaker-column-mobile-version {
+    flex-grow: 1;
+    max-width: 40%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+  }
+  .speakers-visuals-mobile-version .speaker-column-mobile-version:nth-child(2) {
+    margin-top: 112px;
+  }
+  .speaker-img-wrapper img {
+    max-width: 100%;
+    height: auto;
+  }
+  .speaker-card {
+    width: 100%;
   }
   .fly-talks {
     flex-direction: column;
