Replaced visual in app-section

--- a/styles.css
+++ b/styles.css
@@ -1325,7 +1325,7 @@ body {
 }
 .app-section-visual {
   padding-left: 420px;
-  padding-top: 160px;
+  padding-top: 150px;
   padding-right: 130px;
 }
 @media screen and (max-width: 1050px) {
@@ -2003,7 +2003,9 @@ body {
   .app-section-visual img {
     margin-bottom: 100px;
     margin-left: 20px;
-    width: 100%;
+    width: 80%;
+    max-width: 100%;
+    display: block;
   }
   .app-section-copy {
     margin-left: 30px;
