Added faq section - dekstop version

--- a/styles.css
+++ b/styles.css
@@ -1358,6 +1358,51 @@ body {
   margin-bottom: 32px;
 }
 
+.faq-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.faq-visual {
+  position: relative;
+}
+
+.faq-visual img {
+  position: absolute;
+  right: 0;
+  width: 40%;
+  height: auto;
+}
+
+.faq-copy {
+  flex-direction: column;
+  padding-top: 800px;
+  padding-left: 209px;
+}
+
+.faq-copy h6 {
+  font-size: var(--small-font-size);
+}
+
+.faq-copy h2 {
+  font-size: var(--x-large-font-size);
+  font-family: var(--extra-bold-book-font);
+  margin-bottom: 72px;
+}
+
+.faq-copy p {
+  font-size: var(--small-font-size);
+  margin-bottom: 66px;
+}
+
+.faq-copy span {
+  background: linear-gradient(89deg, #37F3E1 -40.27%, #A109FF 101.93%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 @media screen and (max-width: 1050px) {
   .g-header {
     font-size: var(--x-large-font-size);
