--- a/styles.css
+++ b/styles.css
@@ -1393,6 +1393,39 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.footer-section hr {
+  width: 1232px;
+  height: 0px;
+  flex-shrink: 0;
+  stroke-width: 1px;
+  stroke: var(--White, #F5F5F7);
+  opacity: 0.1;
+  margin-top: 44px;
+}
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 44px;
+  margin-bottom: 44px;
+}
+.footer-logos {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.social-media {
+  padding-right: 20px;
+}
+.footer-section a {
+  text-decoration: none;
+}
+.social-media img {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+  margin-right: 20px;
+}
+
 
 
 @media screen and (max-width: 1050px) {
