--- a/styles.css
+++ b/styles.css
@@ -376,7 +376,7 @@ body {
   letter-spacing: var(--xs-letter-spacing);
 }
 .location-copy h2 {
-  width: 402px; /* promjena iz 100%*/
+  width: 402px;
   height: 136px;
   font-family: var(--extra-bold-book-font);
   font-size: var(--x-large-font-size);
@@ -388,7 +388,7 @@ body {
 .location-copy p {
   font-size: var(--small-font-size);
   line-height: var(--compact-line-height);
-  width: 402px; /* promjena iz 100%*/
+  width: 402px;
   height: 72px;
   line-height: 24px;
 }
@@ -1384,7 +1384,7 @@ body {
 }
 .app-section-copy {
   margin-top: 160px;
-  margin-left: 100px;
+  margin-left: 270px;
 }
 .app-section-copy h5 {
   margin-bottom: 100px;
@@ -1400,9 +1400,9 @@ body {
   width: 333px;
 }
 .app-section-visual {
-  padding-left: 420px;
-  padding-top: 150px;
-  padding-right: 130px;
+  padding-left: 270px;
+  padding-top: 160px;
+  padding-right: 200px;
 }
 .testimonial-section {
   background-image: url("./assets/visuals/testimonial-background.png");
@@ -1438,6 +1438,14 @@ body {
   display: flex;
   flex-direction: column;
 }
+.faq-separator {
+  margin-top: -30px;
+  margin-bottom: 30px;
+  border-color: darkgray;
+  opacity: 0.2;
+  width: 500px;
+  margin-right: auto;
+}
 .faq-visual {
   position: relative;
 }
@@ -1471,13 +1479,12 @@ body {
   -webkit-text-fill-color: transparent;
 }
 .footer-section hr {
-  width: 1232px;
-  height: 0px;
-  flex-shrink: 0;
-  stroke-width: 1px;
-  stroke: var(--White, #f5f5f7);
+  width: 1250px;
+  height: 1px;
+  background-color: white;
   opacity: 0.1;
   margin-top: 44px;
+  margin-left: 50px;
 }
 .footer-content {
   display: flex;
@@ -1493,9 +1500,6 @@ body {
   flex-direction: row;
   align-items: center;
 }
-.social-media {
-  padding-right: 20px;
-}
 .footer-section a {
   text-decoration: none;
 }
@@ -1503,7 +1507,8 @@ body {
   width: 30px;
   height: 30px;
   object-fit: contain;
-  margin-right: 20px;
+  margin-right: 30px;
+  background-color: #000;
 }
 
 @media screen and (max-width: 1050px) {
@@ -2124,6 +2129,8 @@ body {
   .silver-mobile-version {
     display: flex;
     flex-direction: row;
+    margin-left: 40px;
+    margin-right: 40px;
     gap: 40px;
   }
   .silver-sponsors .osc-row {
@@ -2136,8 +2143,15 @@ body {
     width: 100%;
     margin-bottom: 10px;
   }
+  .org-partners .osc-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .media .osc-row {
     flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
   }
   .fly-talks {
     flex-direction: column;
@@ -2184,11 +2198,18 @@ body {
   .app-section-content {
     flex-direction: column-reverse;
   }
+  .app-section-header {
+    font-size: var(--x-large-font-size);
+    width: 100%;
+  }
   .app-section-visual {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     padding-left: 0;
     padding-right: 0;
-    margin-top: 0;
-    margin-left: 0;
+    margin-left: 10px;
   }
   .app-section-visual img {
     margin-bottom: 100px;
@@ -2230,17 +2251,30 @@ body {
   }
   .testimonial-visual {
     padding-top: 50px;
-    padding-left: 10px;
+    padding-left: 0;
+    margin-left: 0;
+  }
+  .testimonial-copy {
+    padding-left: 0;
+    max-width: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
   }
   .testimonial-copy h3 {
+    font-size: var(--x-large-font-size);
     margin-top: 70px;
   }
   .testimonial-copy p {
     max-width: 100%;
+    text-align: center;
   }
   .faq-section {
     flex-direction: column-reverse;
     margin-bottom: 1200px;
+  }
+  .faq-separator {
+    width: 85%;
   }
   .faq-visual img {
     content: url("/assets/visuals/faq-mobile.png");
@@ -2258,8 +2292,8 @@ body {
   .footer-section hr {
     width: 100%;
     margin-top: 20px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .footer-content {
     display: flex;
@@ -2287,5 +2321,18 @@ body {
   .footer-link a,
   .footer-rights {
     margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .media .osc-row {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+  }
+  .media .osc-row img {
+    max-width: 100%;
   }
 }
